Small improvements to the site filter UI (#68)
* matching placeholder color for multiselect and input[type=search]

* lower case filter mode AND/OR -> and/or

* change default tagFilterMode and -> or

* Sitelist add fade:in fade:out transitions

* keep MultiSelect and corresp. RadioButtons on same line

* display tag counts in MultiSelect dropdown

* remove eslint hook args

--- a/site/static/global.css
+++ b/site/static/global.css
@@ -4,11 +4,13 @@
   --ghc-color: var(--bg);
   --ghc-bg: white;
 
+  --sms-bg: black;
+  --sms-max-width: 22em;
   --sms-selected-bg: rgba(255, 255, 255, 0.15);
-  --sms-input-bg: black;
   --sms-options-bg: #0f0422;
   --sms-border: 1px solid #333;
   --sms-li-active-bg: rgba(255, 255, 255, 0.15);
+  --sms-placeholder-color: gray;
 }
 body {
   background: var(--bg);
@@ -31,12 +33,14 @@ main {
 input[type='search'] {
   border: 1px solid #333;
   outline: none;
-  padding: 4pt 1ex;
+  padding: 3pt 1ex;
   border-radius: 3pt;
   color: inherit;
   background: black;
-  line-height: 15pt;
   font-size: 1em;
+}
+input[type='search']::placeholder {
+  color: gray;
 }
 a {
   color: cornflowerblue;
