Add svelte-legos (#97)
* add CmdPalette for keyboard-only site navigation

* add svelte-legos

https://github.com/ankurrsinghal/svelte-legos

--- a/site/src/app.css
+++ b/site/src/app.css
@@ -7,7 +7,7 @@
   --sms-bg: black;
   --sms-max-width: 22em;
   --sms-selected-bg: rgba(255, 255, 255, 0.15);
-  --sms-options-bg: #0f0422;
+  --sms-options-bg: #2e2935;
   --sms-border: 1px solid #333;
   --sms-li-active-bg: rgba(255, 255, 255, 0.15);
   --sms-placeholder-color: gray;
