hook up highlight_matches action to site list search input to color+underline query matches

--- a/site/src/app.css
+++ b/site/src/app.css
@@ -54,3 +54,8 @@ a:hover {
 :where(h1, h2, h3, h4, h5, h6) {
   scroll-margin-top: 100px;
 }
+
+::highlight(highlight-match) {
+  color: mediumaquamarine;
+  text-decoration: underline;
+}
